# pixla2

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  song.px2  song.px2.bak
src/: audio_library.c  audio_library.h  buffered_file.c  buffered_file.h  combiner.c  combiner.h  directory_tree.c  directory_tree.h  echo.c  echo.h  filter.c  filter.h  font.c  font.h  instrument.c  instrument.h  lfo.c  lfo.h  lookup_tables.c  lookup_tables.h  main.c  midi_notes.c  midi_notes.h  mixer.c  mixer.h  modulation.c  modulation.h  modulation_target.h  oscillator.c  oscillator.h  oscilloscope.h  parameter_functions.c  parameter_functions.h  player.c  player.h  processor.c  processor.h  rack.c  rack.h  sampler.c  (+41 more)
